fix angular json

--- a/angular.json
+++ b/angular.json
@@ -31,8 +31,7 @@
             ],
             "styles": [
               "src/styles.scss",
-              "node_modules/leaflet/dist/leaflet.css",
-              "src/app/navbar/navbar.component.scss"
+              "node_modules/leaflet/dist/leaflet.css"
             ],
             "scripts": [
               "node_modules/leaflet/dist/leaflet.js"
