much content and fixes, optimisation in progress

--- a/angular.json
+++ b/angular.json
@@ -32,9 +32,6 @@
             "styles": [
               "src/styles.scss",
               "node_modules/leaflet/dist/leaflet.css"
-            ],
-            "scripts": [
-              "node_modules/leaflet/dist/leaflet.js"
             ]
           },
           "configurations": {
@@ -54,7 +51,7 @@
               "outputHashing": "all"
             },
             "development": {
-              "optimization": false,
+              "optimization": true,
               "extractLicenses": false,
               "sourceMap": true
             }
